Updated HTTP response status
