# example/restfulApiHandler/src/routes/Example.js
@@ -44,7 +44,7 @@ module.exports = {
    *         default: 123456
    *         required: true
    *     responses:
-   *       200:
+   *       201:
    *         description: Returns JSON response.
    *         content:
    *           application/json:
@@ -85,7 +85,7 @@ module.exports = {
    *       - Public route
    */
   update (req, res, id) {
-    res.status(204).send({name: `example/${id}:update`});
+    res.status(200).send({name: `example/${id}:update`});
   },
 
   /**
@@ -113,7 +113,7 @@ module.exports = {
    *       - Public route
    */
   delete (req, res, id) {
-    res.status(410).send({name: `example/${id}:delete`});
+    res.status(200).send({name: `example/${id}:delete`});
   },
 
   /**
